--- a/app/src/main/res/layout/fragment_movie_cast_crew.xml
+++ b/app/src/main/res/layout/fragment_movie_cast_crew.xml
@@ -3,17 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".fragments.MovieCastCrewFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:layout_constraintBottom_toTopOf="@+id/viewPager"
@@ -34,23 +35,10 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:lineSpacingExtra="8sp"
-                    android:text="Movies"
+                    android:text="Cast - Crew"
                     android:textColor="@color/colorAccent"
                     android:textSize="20sp"
                     android:textStyle="normal" />
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/searchView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:animateLayoutChanges="true"
-                    android:layoutDirection="rtl"
-                    android:nextFocusLeft="@id/searchView"
-                    android:nextFocusUp="@id/searchView"
-                    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
-                    app:iconifiedByDefault="true"
-                    app:queryBackground="@android:color/transparent"
-                    app:queryHint="Search movies" />
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -78,5 +66,4 @@
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
