--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,154 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/grey"
-    tools:context=".fragments.SettingsFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".fragments.SettingsFragment"
+    android:background="@color/grey">
 
-    <ScrollView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin"
+            android:layoutDirection="rtl"
+            app:theme="@style/ToolbarTheme">
+
+            <TextView
+                android:id="@+id/fragmentTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:textColor="#2cd77d"
+                android:lineSpacingExtra="8sp"
+                android:text="Account Settings" />
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border">
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="73dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="16dp"
+                    android:background="@drawable/border"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="16dp"
+                    android:background="@drawable/border">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="16dp"
+                        android:gravity="center_vertical|left"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"
+                            android:fontFamily="sans-serif"
+                            android:textStyle="normal"
+                            android:textColor="#7f888e"
+                            android:layout_marginBottom="@dimen/layout_padding_8dp"
+                            android:text="Username" />
+
+                        <EditText
+                            android:id="@+id/username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:fontFamily="sans-serif"
+                            android:background="@android:color/transparent"
+                            android:textStyle="normal"
+                            android:textColor="#0a1c24"
+                            android:singleLine="true"
+                            android:maxLength="20"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:selectAllOnFocus="true"
+                            android:text="LinaLaBrujita" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="16dp"
+                        android:gravity="center_vertical|end"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/profilePic"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:background="@color/colorAccent"
+                            android:scaleType="fitXY" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="16dp"
                     android:gravity="center_vertical|left"
-                    android:layout_weight="1"
+                    android:background="@drawable/border"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
                         android:textSize="12sp"
                         android:fontFamily="sans-serif"
                         android:textStyle="normal"
                         android:textColor="#7f888e"
                         android:layout_marginBottom="@dimen/layout_padding_8dp"
-                        android:text="Username" />
+                        android:text="Email" />
 
-                    <TextView
+                    <EditText
+                        android:id="@+id/email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:background="@android:color/transparent"
                         android:textSize="16sp"
                         android:fontFamily="sans-serif"
                         android:textStyle="normal"
                         android:textColor="#0a1c24"
+                        android:maxLength="40"
+                        android:singleLine="true"
                         android:clickable="true"
                         android:focusable="true"
-                        android:text="LinaLaBrujita" />
+                        android:selectAllOnFocus="true"
+                        android:text="lina_carolina@gmail.com" />
+
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="73dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="16dp"
-                    android:gravity="center_vertical|end"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/profilePic"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:background="@color/colorAccent"
-                        android:scaleType="fitXY" />
-                    <!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="73dp"
-                android:layout_marginVertical="16dp"
-                android:gravity="center_vertical|left"
-                android:background="@drawable/border"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/logoutBtn"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:textSize="12sp"
-                    android:fontFamily="sans-serif"
-                    android:textStyle="normal"
-                    android:textColor="#7f888e"
-                    android:layout_marginBottom="@dimen/layout_padding_8dp"
-                    android:text="Email" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:textSize="16sp"
-                    android:fontFamily="sans-serif"
-                    android:textStyle="normal"
-                    android:textColor="#0a1c24"
+                    android:paddingVertical="16dp"
+                    android:background="@drawable/border"
                     android:clickable="true"
-                    android:focusable="true"
-                    android:text="lina_carolina@gmail.com" />
+                    android:focusable="true" >
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:clickable="true"
-                android:focusable="true" >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="73dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="16dp"
-                    android:gravity="center_vertical|left"
-                    android:orientation="vertical">
-
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:fontFamily="sans-serif"
-                        android:textStyle="normal"
-                        android:textColor="#0a1c24"
-                        android:text="Log out" />
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="16dp"
+                        android:gravity="center_vertical|left"
+                        android:orientation="vertical">
 
-                </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:fontFamily="sans-serif"
+                            android:textStyle="normal"
+                            android:textColor="#0a1c24"
+                            android:text="Log out" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="73dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="16dp"
-                    android:gravity="center_vertical|end"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:src="@mipmap/chevron"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:scaleType="fitXY" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="16dp"
+                        android:gravity="center_vertical|end"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:src="@mipmap/chevron"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:scaleType="fitXY" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-</FrameLayout>
+        </ScrollView>
+    </FrameLayout>
+</LinearLayout>
