--- a/app/src/main/res/layout/movie_content_detail.xml
+++ b/app/src/main/res/layout/movie_content_detail.xml
@@ -137,6 +137,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
+        android:id="@+id/viewAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
