--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -27,16 +27,21 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:statusBarScrim="@android:color/transparent">
 
-            <ImageView
-                android:id="@+id/thumbnail_image_header"
+            <androidx.viewpager.widget.ViewPager
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:clickable="true"
-                android:adjustViewBounds="true"
-                app:layout_collapseMode="parallax"
-                android:focusable="true" />
+                android:id="@+id/viewpager_movie_detail"/>
+
+<!--            <ImageView-->
+<!--                android:id="@+id/thumbnail_image_header"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:fitsSystemWindows="true"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:clickable="true"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                app:layout_collapseMode="parallax"-->
+<!--                android:focusable="true" />-->
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
