--- a/app/src/main/res/layout/movie_content_detail.xml
+++ b/app/src/main/res/layout/movie_content_detail.xml
@@ -123,18 +123,18 @@
         android:textStyle="bold"
         android:text="Top Billed Cast" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_cast"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:clipToPadding="false"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:scrollbars="none"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recycler_view_cast_detail"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="8dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginRight="8dp"-->
+<!--        android:clipToPadding="false"-->
+<!--        android:paddingTop="@dimen/activity_vertical_margin"-->
+<!--        android:scrollbars="none"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent" />-->
 
     <TextView
         android:id="@+id/viewAll"
